# JobJourney

./: .gitignore  .python-version  CONTRIBUTING.md  README.md  docker-compose.yml
.github/workflows/: codeql.yml  django.yml  react.yml
backend/: Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml  setup.cfg
backend/scripts/: postgres_init.sql
backend/src/: .env-template  .env-template-compose
backend/src/job_journey/: celery.py  settings.py  token.py  urls.py
frontend/: README.md  package-lock.json
